--- a/server_management/ansible/playbook/data_division_server/data_division_playbook.yaml
+++ b/server_management/ansible/playbook/data_division_server/data_division_playbook.yaml
@@ -1,5 +1,5 @@
 - name: data_division 배포
-  hosts: data_division_server
+  hosts: main_server
   vars:
     compose_file: "./data_division"
     container_name: "data_division"
