--- a/server_management/ansible/playbook/main_server/data_api.yaml
+++ b/server_management/ansible/playbook/main_server/data_api.yaml
@@ -1,5 +1,5 @@
 - name: api 배포
-  hosts: main_server
+  hosts: data_division_server
   vars:
     compose_file: "./data_api"
     container_name: "api"
