--- a/feature/monitoring/prometheus/config/prometheus.yml
+++ b/feature/monitoring/prometheus/config/prometheus.yml
@@ -6,7 +6,7 @@ scrape_configs:
     metrics_path: '/api/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
-      - targets: ['13.124.179.156:8091']
+      - targets: ['52.79.42.131:8091']
 
   - job_name: 'spring-actuator division'
     metrics_path: '/actuator/prometheus'
@@ -18,7 +18,7 @@ scrape_configs:
     metrics_path: '/jmx'
     scrape_interval: 5s
     static_configs:
-      - targets: ['3.38.164.6:9404', '3.34.254.10:9404', '15.165.7.7:9404']
+      - targets: ['54.180.130.90:9404', '3.38.186.82:9404', '43.201.41.201:9404', '3.34.43.153:9404', '52.78.98.144:9404']
 
 rule_files:
   - "alert.rules.yml"
